Nowrapped the Header text

--- a/app/styles.css
+++ b/app/styles.css
@@ -49,6 +49,7 @@ div.logo-container {
 div.logo-text {
   font-size: 10vh;
   padding-top: 5vh;
+  white-space: nowrap;
   width: 100%;
   font-family: BlackThornsRegular;
   color: var( --primary-light-color );
